# SplitMind

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  README_CN.md  ROADMAP.md  docker-compose.yml  pyproject.toml  test.html  test_provider_plugin.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  MAINTAINER_GUIDE.md  PLUGIN_API.md  TESTING.md  commercialization-strategy.md  index.html
docs/blog/: 001-why-splitmind.md
examples/: advanced_usage.py  basic_usage.py  comprehensive_test.py  execution_modes_demo.py  local_model_demo.py  local_model_integration.py  mock_local_model.py  providers_test.py  pure_framework_demo.py  test_cli_with_mock_model.py  test_mock_local_model.py
splitmind/: __init__.py  cli.py  config.py  demo.py
splitmind/core/: aggregator.py  engine.py  local_model.py  privacy.py  splitter.py
splitmind/providers/: __init__.py  base.py  kimi_provider.py  local_provider.py  local_provider_v2.py  ollama_manager.py  openai_provider.py  registry.py
splitmind/providers/built_in/: __init__.py  anthropic_provider.py
splitmind/web/: __init__.py  app.py  index.html
tests/: test_core.py  test_provider_fallback.py
